--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -22,7 +22,7 @@ jobs:
     - run: yarn install
     - run: yarn build
     - name: Netlify Deploy
-      uses: jsmrcaga/action-netlify-deploy@v1.7.1
+      # uses: jsmrcaga/action-netlify-deploy@v1.7.1
       env:
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_ACCESS_TOKEN }}
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
