--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -6,11 +6,6 @@
 #################################
 name: Lint Code Base
 
-#
-# Documentation:
-# https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions
-#
-
 #############################
 # Start the job on all push #
 #############################
@@ -41,7 +36,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
           fetch-depth: 0
       ################################
       # Run Linter against code base #
@@ -50,5 +44,10 @@ jobs:
         uses: github/super-linter@v4
         env:
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_JAVASCRIPT_ES: true
+          VALIDATE_HTML: true
+          VALIDATE_JSX: true
+          VALIDATE_JSON: true
+          VALIDATE_CSS: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
