--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-particles-js": "^3.3.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-youtube": "^7.12.0",
